<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_filtros">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marg_contentdomicilio"
            android:layout_marginLeft="@dimen/marg_contentdomicilio"
            android:textColor="@color/grey_800"
            android:textSize="@dimen/sp_activityfiltro_titulos"
            android:textStyle="bold"
            android:text="@string/txt_domicilio_instalador"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--Modulo departamento-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            style="@style/TextoOpcionesFiltro"
            android:text="@string/txt_departamento"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/marg_contentdomicilio"
            android:layout_marginLeft="@dimen/marg_contentdomicilio"
            android:gravity="right"
            android:textSize="@dimen/sp_texto_contentdomicilio_distrito"
            android:textColor="@color/blue_800"
            android:id="@+id/txt_departamento"
            android:text="Lima"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--Fin modulo departamento-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            style="@style/TextoOpcionesFiltro"
            android:text="@string/txt_distrito"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/marg_contentdomicilio"
            android:layout_marginLeft="@dimen/marg_contentdomicilio"
            android:gravity="right"
            android:textSize="@dimen/sp_texto_contentdomicilio_distrito"
            android:textColor="@color/blue_800"
            android:id="@+id/txt_distrito"
            android:text="Los Olivos"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
</LinearLayout>