<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_filtros"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marg_contentdomicilio"
            android:layout_marginLeft="@dimen/marg_contentdomicilio"
            android:textSize="@dimen/sp_activityfiltro_titulos"
            android:textColor="@color/grey_800"
            android:textStyle="bold"
            android:text="@string/txt_contentcategoriasinstalador_categorias"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--Modulo departamento-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            style="@style/TextoOpcionesFiltro"
            android:text="@string/txt_contenttipoinstalador_todos"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--Fin modulo opcion1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            style="@style/TextoOpcionesFiltro"
            android:text="@string/txt_contentcategoriasinstalador_opc1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marg_contentdomicilio"
                android:layout_marginLeft="@dimen/marg_contentdomicilio"
                android:src="@mipmap/categoria_opc1" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--fin modulo uno-->
    <!--Fin modulo opcion1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            style="@style/TextoOpcionesFiltro"
            android:text="@string/txt_contentcategoriasinstalador_opc1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marg_contentdomicilio"
                android:layout_marginLeft="@dimen/marg_contentdomicilio"
                android:src="@mipmap/categoria_opc2" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--fin modulo uno-->
    <!--Fin modulo opcion1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            style="@style/TextoOpcionesFiltro"
            android:text="@string/txt_contentcategoriasinstalador_opc1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marg_contentdomicilio"
                android:layout_marginLeft="@dimen/marg_contentdomicilio"
                android:src="@mipmap/categoria_opc3" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:background="@color/separador_celeste"/>
    <!--fin modulo uno-->
</LinearLayout>